"use strict";
Object.defineProperty(exports, "__esModule", { value: true });
var fs = require("fs");
var gas_station_pb_1 = require("./gas_station_pb");
var gasStations = new gas_station_pb_1.GasStationList();
var station1 = new gas_station_pb_1.GasStation();
station1.setName('Galp');
station1.setAddress('Rua da Alegria');
station1.setPricePerGallon(1.5);
var station2 = new gas_station_pb_1.GasStation();
station2.setName('Shell');
station2.setAddress('Rua da Tristeza');
station2.setPricePerGallon(1.6);
gasStations.addGasStations(station1);
gasStations.addGasStations(station2);
var json = JSON.stringify(gasStations.toObject());
fs.writeFileSync('gas_stations.json', json);
var jsonSize = fs.statSync('gas_stations.json').size;
console.log("JSON size: ".concat(jsonSize, " bytes"));
var binary = gasStations.serializeBinary();
fs.writeFileSync('gas_stations.binary', binary);
var binarySize = fs.statSync('gas_stations.binary').size;
console.log("Binary size: ".concat(binarySize, " bytes"));
console.log("Binary is ".concat(jsonSize / binarySize, " times smaller than JSON"));
console.log('JSON:', json);
console.log('Binary:', binary);
